# text_extraction

./: .gitignore  CMakeLists.txt  README.md  build.sh  fast_clustering.cpp  group_classifier.cpp  group_classifier.h  main.cpp  max_meaningful_clustering.cpp  max_meaningful_clustering.h  mser.cpp  mser.h  nfa.cpp  region.cpp  region.h  region_classifier.cpp  region_classifier.h  utils.h
boost_train/: boost_char_train.cpp  boost_groups_train.cpp  build.sh  build_chars_cvs.py  build_groups_cvs.py  extract_char_features.cpp  extract_group_features.cpp  trained_boost_char.xml  trained_boost_groups.xml
